Prog03.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Prog03.java */
import java.util.Scanner;

class Prog03/*@bgen(jjtree)*/implements Prog03TreeConstants, Prog03Constants {/*@bgen(jjtree)*/
  protected static JJTProg03State jjtree = new JJTProg03State();public static void main(String args[]) {
    System.out.println(">>> Lambda Expression Evaluator <<<");
    System.out.println("Enter an applied Lambda expression:");
//  User input
    Prog03 t = new Prog03(System.in);
    try {
      ASTStart n = t.Start();

      SimpleNode rootNode = (SimpleNode) n.jjtGetChild(0);
      rootNode.dump("");
      System.out.println();
      System.out.println("The Lambda expression in the concrete syntax:");
      System.out.println(rootNode.astToString());
      System.out.println();
      System.out.println("The abstract syntax tree with free variables:");
      rootNode.dumpFV("");
      //Scanner sc = new Scanner(System.in);
      //System.out.println("Enter the variable to be substituted:");
      //String subVar=sc.nextLine();
      //System.out.println("Enter the substituting applied Lambda expression:");
      //Prog03 input2 = new Prog03(System.in);
      //ASTStart subExpr = input2.Start();      
      //subExpr.dump("");
      //System.out.println("The substitution result:");
     // SimpleNode newTree = rootNode.substitute(subVar,(SimpleNode)subExpr.jjtGetChild(0));
      //newTree.dump("");
      System.out.println();
      System.out.println("Bonus Part");
      System.out.println(">>> Lambda Expression Evaluator <<<");
      System.out.println("Enter an applied Lambda Expression:");
      t.ReInit(System.in);
      ASTStart n2 = t.Start();
      System.out.println();
      System.out.println("The abstract syntax tree");
      SimpleNode rootNode2 = (SimpleNode) n2.jjtGetChild(0);
      rootNode2.dump("");
      System.out.println();
      System.out.println("Enter the variable to be substituted:");
      Scanner sc = new Scanner(System.in);
      String varSub = sc.nextLine();
      System.out.println();
      System.out.println("Enter the substituting applied lambda expression:");
      t.ReInit(System.in);
      ASTStart n3 = t.Start();
      System.out.println();
      System.out.println("The abstract syntax tree:");
      SimpleNode rootNode3 = (SimpleNode) n3.jjtGetChild(0);
      rootNode3.dump("");
      System.out.println();
      System.out.println("The Substitution result:");
      SimpleNode subResult = rootNode2.cloneTree(); //For substitution creating a clone
      subResult = subResult.substitute(varSub, rootNode3);
      subResult.dump("");
      System.out.println();
      //Reduction
      System.out.println("Enter an applied Lambda expression(For reduction)");
      t.ReInit(System.in);
      ASTStart n4 = t.Start();
      System.out.println();
      SimpleNode rootNode4 = (SimpleNode) n4.jjtGetChild(0);
      SimpleNode result = rootNode4.cloneTree();
      result = result.normalOrderEvaluate();
      System.out.println("Normal Order Evaluation Result:");
      result.dump("");
      System.out.println();
    } catch (Exception e) {
      System.out.println("Error has occured please check below trace error");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }

  static final public ASTStart Start() throws ParseException {
                    /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Expression() throws ParseException {
    if (jj_2_2(2)) {
      MyID();
    } else if (jj_2_3(2)) {
               ASTadd jjtn001 = new ASTadd(JJTADD);
               boolean jjtc001 = true;
               jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(15);
      } finally {
               if (jjtc001) {
                 jjtree.closeNodeScope(jjtn001, true);
               }
      }
    } else if (jj_2_4(2)) {
                          ASTsub jjtn002 = new ASTsub(JJTSUB);
                          boolean jjtc002 = true;
                          jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(16);
      } finally {
                          if (jjtc002) {
                            jjtree.closeNodeScope(jjtn002, true);
                          }
      }
    } else if (jj_2_5(2)) {
                                     ASTmul jjtn003 = new ASTmul(JJTMUL);
                                     boolean jjtc003 = true;
                                     jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(17);
      } finally {
                                     if (jjtc003) {
                                       jjtree.closeNodeScope(jjtn003, true);
                                     }
      }
    } else if (jj_2_6(2)) {
                                                ASTdiv jjtn004 = new ASTdiv(JJTDIV);
                                                boolean jjtc004 = true;
                                                jjtree.openNodeScope(jjtn004);
      try {
        jj_consume_token(18);
      } finally {
                                                if (jjtc004) {
                                                  jjtree.closeNodeScope(jjtn004, true);
                                                }
      }
    } else if (jj_2_7(2)) {
      Integer();
    } else if (jj_2_8(2)) {
      jj_consume_token(19);
      jj_consume_token(LAMBDA);
      MyID();
                       ASTlamb jjtn005 = new ASTlamb(JJTLAMB);
                       boolean jjtc005 = true;
                       jjtree.openNodeScope(jjtn005);
      try {
        ExpressionBody();
      } catch (Throwable jjte005) {
                       if (jjtc005) {
                         jjtree.clearNodeScope(jjtn005);
                         jjtc005 = false;
                       } else {
                         jjtree.popNode();
                       }
                       if (jjte005 instanceof RuntimeException) {
                         {if (true) throw (RuntimeException)jjte005;}
                       }
                       if (jjte005 instanceof ParseException) {
                         {if (true) throw (ParseException)jjte005;}
                       }
                       {if (true) throw (Error)jjte005;}
      } finally {
                       if (jjtc005) {
                         jjtree.closeNodeScope(jjtn005,  2);
                       }
      }
      jj_consume_token(20);
    } else if (jj_2_9(2)) {
      jj_consume_token(19);
      Expression();
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
                         ASTappl jjtn006 = new ASTappl(JJTAPPL);
                         boolean jjtc006 = true;
                         jjtree.openNodeScope(jjtn006);
        try {
          Expression();
        } catch (Throwable jjte006) {
                         if (jjtc006) {
                           jjtree.clearNodeScope(jjtn006);
                           jjtc006 = false;
                         } else {
                           jjtree.popNode();
                         }
                         if (jjte006 instanceof RuntimeException) {
                           {if (true) throw (RuntimeException)jjte006;}
                         }
                         if (jjte006 instanceof ParseException) {
                           {if (true) throw (ParseException)jjte006;}
                         }
                         {if (true) throw (Error)jjte006;}
        } finally {
                         if (jjtc006) {
                           jjtree.closeNodeScope(jjtn006,  2);
                         }
        }
      }
      jj_consume_token(20);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ExpressionBody() throws ParseException {
    if (jj_2_11(2)) {
      jj_consume_token(21);
      Expression();
      label_2:
      while (true) {
        if (jj_2_10(2)) {
          ;
        } else {
          break label_2;
        }
                        ASTappl jjtn001 = new ASTappl(JJTAPPL);
                        boolean jjtc001 = true;
                        jjtree.openNodeScope(jjtn001);
        try {
          Expression();
        } catch (Throwable jjte001) {
                        if (jjtc001) {
                          jjtree.clearNodeScope(jjtn001);
                          jjtc001 = false;
                        } else {
                          jjtree.popNode();
                        }
                        if (jjte001 instanceof RuntimeException) {
                          {if (true) throw (RuntimeException)jjte001;}
                        }
                        if (jjte001 instanceof ParseException) {
                          {if (true) throw (ParseException)jjte001;}
                        }
                        {if (true) throw (Error)jjte001;}
        } finally {
                        if (jjtc001) {
                          jjtree.closeNodeScope(jjtn001,  2);
                        }
        }
      }
    } else if (jj_2_12(2)) {
      MyID();
              ASTlamb jjtn002 = new ASTlamb(JJTLAMB);
              boolean jjtc002 = true;
              jjtree.openNodeScope(jjtn002);
      try {
        ExpressionBody();
      } catch (Throwable jjte002) {
              if (jjtc002) {
                jjtree.clearNodeScope(jjtn002);
                jjtc002 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte002 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte002;}
              }
              if (jjte002 instanceof ParseException) {
                {if (true) throw (ParseException)jjte002;}
              }
              {if (true) throw (Error)jjte002;}
      } finally {
              if (jjtc002) {
                jjtree.closeNodeScope(jjtn002,  2);
              }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void MyID() throws ParseException {
 /*@bgen(jjtree) MyID */
  ASTMyID jjtn000 = new ASTMyID(JJTMYID);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setName(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Integer() throws ParseException {
 /*@bgen(jjtree) Integer */
        ASTInteger jjtn000 = new ASTInteger(JJTINTEGER);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(INTEGER_LITERAL);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
        jjtn000.setValue(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_3_9() {
    if (jj_scan_token(19)) return true;
    if (jj_3R_3()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_scan_token(19)) return true;
    if (jj_scan_token(LAMBDA)) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_3()) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_scan_token(16)) return true;
    return false;
  }

  static private boolean jj_3R_3() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(18)) return true;
    return false;
  }

  static private boolean jj_3R_4() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3_12() {
    if (jj_3R_4()) return true;
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3_11() {
    if (jj_scan_token(21)) return true;
    if (jj_3R_3()) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_scan_token(15)) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(17)) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3_12()) return true;
    }
    return false;
  }

  static private boolean jj_3R_5() {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_3R_3()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public Prog03TokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[12];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Prog03(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Prog03(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new Prog03TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jjtree.reset();
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public Prog03(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new Prog03TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jjtree.reset();
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public Prog03(Prog03TokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(Prog03TokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jjtree.reset();
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  static private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
  static private int[] jj_lasttokens = new int[100];
  static private int jj_endpos;

  static private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[22];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 0; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 22; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

  static private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 12; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
            case 1: jj_3_2(); break;
            case 2: jj_3_3(); break;
            case 3: jj_3_4(); break;
            case 4: jj_3_5(); break;
            case 5: jj_3_6(); break;
            case 6: jj_3_7(); break;
            case 7: jj_3_8(); break;
            case 8: jj_3_9(); break;
            case 9: jj_3_10(); break;
            case 10: jj_3_11(); break;
            case 11: jj_3_12(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  static private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

}
